[gd_scene load_steps=2 format=3 uid="uid://cxr02tx7to48k"]

[ext_resource type="Script" path="res://Modules/Hurtbox/hurtbox.gd" id="1_enfmj"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_enfmj")

[node name="GraceTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="GraceTimer" to="." method="_on_grace_timer_timeout"]
